add restaurants resource
